test/fixtures/astRegression/shouldFail/FullyQualifiedTypes.sand
pub class FullyQualifiedTypes {
    foo(): java.util?.ArrayList {

    }
}